# mcp-agentis

./: .gitignore  CLAUDE.md  MCP-GUIDE.md  README.md  agent.md  bt  claude.json  crypto.md  investor.md  mcp.md  pyproject.toml  roadmap.md  stock.md
examples/: agentis_mcp.config.yaml  dotenv_agent_example.py
examples/basic_agent/: agentis_mcp.config.yaml  main.py  search_server.py
examples/llm_agent/: agentis_mcp.config.yaml  agentis_mcp.secrets.yaml.example  fun_facts_server.py  llm_server.py  main.py
examples/mcp_chat_agent/: agentis_mcp.config.yaml  agentis_mcp.secrets.yaml.example  main.py
schema/: mcp-agent.config.schema.json
src/agentis_mcp/: __init__.py  app.py
src/agentis_mcp/agents/: __init__.py  agent.py  iterative_agent.py  llm_agent.py
src/agentis_mcp/config/: __init__.py  settings.py
src/agentis_mcp/core/: __init__.py  context.py  decorator_app.py
src/agentis_mcp/mcp/: __init__.py  aggregator.py  client_session.py  connection_manager.py  gen_client.py  server_registry.py
src/agentis_mcp/utils/: __init__.py  logging.py  secrets.py  stdio.py
src/agentis_mcp/workflows/: __init__.py
src/agentis_mcp/workflows/parallel/: __init__.py  fan_in.py  fan_out.py  parallel_llm.py
src/agentis_mcp/workflows/router/: __init__.py  router_base.py  router_llm.py
