[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentis-mcp"
version = "0.1.0"
description = "A flexible multi-agent framework for building powerful AI agents with MCP server connectivity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agentis Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anyio>=3.7.1",
    "pydantic>=2.0.0",
    "fastmcp>=0.4.1",
    "mcp>=0.7.0",
    "rich>=12.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true